Alignment and CSS fixes following the addition of read watch attributes.

--- a/oneflow/core/static/sass/_read.scss
+++ b/oneflow/core/static/sass/_read.scss
@@ -23,15 +23,22 @@
         position: relative;
         top: 0;
         right: 0;
-        padding-top: 11px;
-        line-height: 100%;
+        padding-top: 10px;
+
+        /* Keep the icons over the title. */
+        z-index: 20;
 
         li.action {
-            display: inline;
+            margin-left: 10px;
+            display: inline-block;
+
+            &:first-child {
+                margin-left: 0;
+            }
 
             ul.dropdown-menu {
-                margin-left: -63px;
-                padding: 10px 0;
+                margin-left: -78px;
+                padding: 10px 10px 10px 0;
                 text-align: center;
             }
         }
@@ -41,7 +48,7 @@
         }
 
         a {
-            margin-left: 10px;
+            /*padding-left: 10px;*/
             color: #29313c;
             opacity: 0.5;
 
@@ -63,25 +70,30 @@
     }
 
     .end-actions {
-        font-size: 16px;
+        /* Reset the article-content margin. */
+        margin-left: 0;
+
+        font-size: 15px;
         margin-top: 4em;
         border-top: 2px solid #949aa1;
 
-        a {
+        li.action {
+
+            vertical-align: center;
+
             &:first-child,
             &:nth-child(2) {
                 /* Actions icons come by pair, one of them being hidden */
                 margin-left: 0;
             }
-        }
 
-        li.action {
             ul.dropdown-menu {
-                margin-left: 0;
+                margin-left: -20px;
                 padding: 10px;
                 text-align: left;
 
                 li {
+                    margin-left: 0;
                     font-size: 16px;
                 }
             }
@@ -123,11 +135,19 @@
                 overflow: hidden;
             */
 
+            ul.actions.hide {
+                display: none;
+            }
+
             .article-title {
                 position: relative;
                 top: 0;
                 left: 0;
-                max-height: 1.5em;
+
+                /* Keep the title under the icons. */
+                z-index: 10;
+
+                max-height: 1.40em;
                 overflow: hidden;
                 text-overflow: ellipsis;
                 vertical-align: top;
@@ -135,8 +155,7 @@
             }
 
             .meta {
-                height: 3.7em;
-                overflow: hidden;
+                /*height: 3.7em;*/
 
                 ul.status-icons {
                     display: inline;
