--- a/oneflow/core/static/sass/_responsive.scss
+++ b/oneflow/core/static/sass/_responsive.scss
@@ -51,8 +51,6 @@
     .read-list-row {
         .article {
             .article-meta {
-                /*max-height: 4.62em;*/
-
                 .meta {
                     .meta {
                         font-size: 140%;
@@ -97,6 +95,13 @@
             margin-top: 1em;
             border-top-width: 1px;
             margin-bottom: 1em;
+
+            li.action {
+                ul.dropdown-menu {
+                    margin-left: -80px;
+                    padding: 10px;
+                }
+            }
 
             a {
                 /*  We have only icons on small devices.
